--- a/api/demo-materials-tracking.yml
+++ b/api/demo-materials-tracking.yml
@@ -3,6 +3,9 @@ info:
   title: Demo Material Movement API
   version: 1.0.0
   description: A fictional demo API to illustrate authenticated input and output from cloud environment.
+externalDocs:
+  description: Get a Bearer token
+  url: https://geological-survey-of-queensland.github.io/gsq-data-api-docs/auth/materials-demo/
 servers:
   - url: https://f5ttvzdni2.execute-api.ap-southeast-2.amazonaws.com
 paths:
